# Football-marketing

./: .gitignore  bespoke-mmm.py  index.html  index.qmd  mock-blog-post.html  mock-blog-post.qmd  mock-ordered-beta.py  notes.qmd  ordered_beta_dat.parquet  passing-rushing-mmm.py  pyproject.toml
data-cleaning-scripts/: bespoke-mmm.py  data-cleaning-scripts.R  extract-posterior.py  mock-ordered-beta.py  pooled-explosive-data-cleaning.R  unpooled-explosive-plays.R
modeling-scripts/: bespoke-mmm.py  final-mmms-vanilla-beta.py  mixed-model-mmm.py  mmm-beta-binomial.py  mmm-mm-saturation.py  mmm-ordbeta.stan  mock-blog-post.html  mock-blog-post.qmd  mock-mm-script.py  ordbeta.R  passing-rushing-mmm.py
modeling-scripts/sandbox/: trying-to-tune-sat-priors.py
plotting-scripts/: make-marginal-contribution-plot.R
processed-data/: processed-dat.parquet
