[project]
name = "nfl-marketing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.20.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "nflreadpy>=0.1.5",
    "numpyro>=0.20.0",
    "nutpie>=0.16.5",
    "patsy>=1.0.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pymc>=5.27.1",
    "pymc-marketing>=0.17.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
